# Serverless-Data-Pipeline

./: Makefile  README.md  deploy_lambda.sh  download_parquet.sh  pyproject.toml
serverless_data_process/: Dockerfile  lambda_function.py  lib.py  requirements.txt
src/: create_deltatable.py  get_url.py  nyc_taxi_stats.py  tests.py  upload_to_s3.py
src/aws_utils/: examine.py  utils.py
