[tool.poetry]
name = "Serverless Data Pipeline with AWS Lambda"
version = "0.1.0"
description = "This guide provides step-by-step instructions to set up a serverless data pipeline using AWS Lambda for processing raw data into a Delta table without the need for Databricks or Spark. This approach is suitable for handling data sizes up to 400 MB."
authors = ["Krit Pragobdee <krit.pragobdee@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.15"
deltalake = "^0.16.0"
pandas = "^2.2.1"
boto3 = "^1.34.63"
ruff = "^0.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
